# MoonGem

./: .build.yml  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  build-manifest.yaml  docker-build.sh  docker-compose.yml  docker-deploy.sh
cmake/: FindLibMagic.cmake
container/: start.sh
include/: buffer.h  cert.h  gemini.h  handler.h  hashdef.h  header.h  http.h  log.h  net.h  options.h  parse.h  runtime.h  script.h  signals.h  status.h  store.h  uri.h  util.h
lib/: CMakeLists.txt
sample/: header.gmi  library.lua  page.gmi
src/: api.c  buffer.c  cert.c  gemini.c  handler.c  header.c  http.c  main.c  net.c  options.c  parse.c  runtime.c  script.c  signals.c  store.c  uri.c  util.c
src/test/: store.c
test/: .gitignore  run-tests.sh  setup.sh  test.py  test_definitions.py
test/root/: has_script.gmi
